tests/fixtures/errors/missing_field_construct.ore
type Point { x:Int, y:Int }

fn main
  p := Point(x: 1)
  print p
